# defect-mlff

./: .gitignore  LICENSE  README  pyproject.toml
src/cli/: __init__.py  common.py  diversify.py  generate.py
src/defect_mlff/: __init__.py
src/defect_mlff/diversification/: __init__.py  config_sampler.py  data_eval.py
src/defect_mlff/generation/: __init__.py  aims_gen.py  defect_generator.py  distances.py  mlff_gen.py  vasp_gen.py
src/defect_mlff/mlff_prep/: __init__.py  parse_MLAB.py
src/defect_mlff/parsing/: parser.py
src/defect_mlff/utils/: __init__.py
tests/: conftest.py  test_config_sampler.py  test_config_sampler_jsons.py  test_defect_generator_io.py  test_generation_smoke.py  test_mos2_workflow.py
tests/data/mos2/: POSCAR_mos2  geometry.in
